--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,15 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 28
+    splits{
+        abi{
+            enable true
+            reset()
+            include "x86","x86_64","arm64-v8a","mips","armeabi","armeabi-v7a"
+            universalApk true
+        }
+    }
+
     defaultConfig {
         applicationId "com.websbro.book_zoo"
         minSdkVersion 21
@@ -11,8 +20,9 @@ android {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
+
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
@@ -23,7 +33,7 @@ dependencies {
     implementation 'com.github.barteksc:android-pdf-viewer:2.8.2'
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.android.support:cardview-v7:28.0.0'
-//    implementation 'com.android.support:support-v4:28.0.0'
+    implementation 'com.android.support:support-v4:28.0.0'
     implementation 'com.github.GoodieBag:CarouselPicker:v1.1'
     implementation 'com.google.firebase:firebase-core:16.0.4'
 
